--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,67 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --color-primary: #23272a;
+    --color-secondary: #ffffff;
+    --color-bg-header: #2a5ee8;
+    --color-bg-section: #f6f6f6;
+    --color-accessory: #7289da;
+}
+body{
+    background-color: var(--color-secondary);
+    font-family: 'Noto Sans Linear B', sans-serif;
+}
+header{
+    background-color: var(--color-bg-header);
+}
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5px;
+}
+.button{
+    color: black;
+    background-color:var(--color-secondary);
+    border-radius: 10px;
+}
+ul{
+    list-style: none;
+}
+a{
+    color: var(--color-secondary);
+    text-decoration: none;
+    display: block;
+    padding: 6px 10px;
+    text-decoration: none;
+}
+.even{
+    color: var(--color-bg-section);
+}
+/* FLEX  */
+
+.d-flex{
+    display: flex;
+    flex-flow:row wrap ;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+.flex-center{
+    justify-content: center;
+}
+
+#hero{
+    background-image: url(../img/jumbo.png);
+    min-height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.hero-content{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--color-secondary);
+}
