--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header{
     color: black;
     background-color:var(--color-secondary);
     border-radius: 10px;
+    margin: 10px;
 }
 ul{
     list-style: none;
@@ -51,6 +52,12 @@ a{
 }
 .flex-center{
     justify-content: center;
+}
+.flex-right{
+    justify-content: right;
+}
+.flex-end{
+    justify-content: flex-end;
 }
 
 #hero{
